--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <!-- Figure 1 (Actual Image) -->
                     <div class="my-6">
                         <!-- Using relative path and a standard image placeholder URL for safety -->
-                        <img src="figure1.jpg" alt="Comparison of Go Bigger vs Go Longer Scaling" class="w-full h-auto rounded-lg shadow-lg border border-gray-200" onerror="this.onerror=null; this.src='https://placehold.co/900x400/f1f5f9/94a3b8?text=Figure+1+Placeholder%3A+EGM+Paradigm'">
+                        <img src="figure1.jpg" alt="Comparison of Go Bigger vs Go Longer Scaling" class="w-full h-auto rounded-lg shadow-lg border border-gray-200" onerror="this.onerror=null; this.src='figure1.jpg'>
                         <p class="text-sm text-center text-gray-500 mt-3">Figure 1: The EGM Paradigm. Comparison between the traditional 'Go Bigger' approach (scaling model size) and our proposed 'Go Longer' approach (scaling test-time computation/tokens) for Visual Grounding.</p>
                     </div>
                 </section>
