--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <section id="overview" class="scroll-mt-24">
                     <div class="space-y-4">
             
-                        <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 leading-normal">
+                        <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 leading-relaxed">
                             <span class="gemini-gradient-text">Bigger or Longer?</span><br>
                             Test-Time-Scaling is More Efficient than Model-Size-Scaling for Visual Grounding
                         </h1>
